[build-system]
requires = [
    "setuptools >= 40.6.0",
    "wheel",
]
build-backend = "setuptools.build_meta"


[tool.pytest.ini_options]
addopts = ["--strict-markers", "--strict-config"]
testpaths = "tests"


[tool.black]
line-length = 88


[tool.tox]
legacy_tox_ini = """
[tox]
envlist=py39,py310

[testenv]
deps = pytest >= 
extras = tests
commands = python -m pytest {posargs:-n auto}
"""